--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,12 +15,12 @@ body{
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 5px solid steelblue;
   padding: 30px;
   border-radius: 5px;
 }
 
-.btn{
+:host ::ng-deep .btn {
   display: inline-block;
   background: #000;
   color: #fff;
