--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,4 @@
-<div class="task" [ngClass]="{remainder: task.reminder}">
+<div class="task" [ngClass]="{remainder: task.reminder}" (dblclick)="onDoubleClick(task)">
   <h3>{{ task.text }} <fa-icon [icon]="faXmark" [ngStyle]="{'color': 'red'}" (click)="OnClick(task)"></fa-icon>
   </h3>
   <p>{{ task.day }}</p>
