--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,15 +1,15 @@
-<form class="add-form">
+<form class="add-form" (ngSubmit)="onSubmit()">
   <div class="form-control">
     <label for="task-text">Task</label>
-    <input type="text" name="task-text" id="task-text" placeholder="Add Your Task Here ..." />
+    <input type="text" name="task-text" id="task-text" placeholder="Add Your Task Here ..." [(ngModel)]="text" />
   </div>
   <div class="form-control">
     <label for="task-day&time">Date &#38; Time</label>
-    <input type="text" name="task-day&time" id="task-day&time" placeholder="Add Task Date Here..." />
+    <input type="text" name="task-day&time" id="task-day&time" placeholder="Add Task Date Here..." [(ngModel)]="day" />
   </div>
   <div class="form-control form-control-check">
     <label for="task-reminder">Set Reminder</label>
-    <input type="checkbox" name="task-reminder" id="task-reminder" />
+    <input type="checkbox" name="task-reminder" id="task-reminder" [(ngModel)]="reminder" />
   </div>
   <input type="submit" value="Save Task" class="btn btn-block" />
 </form>
