add git repo url into about page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,13 @@
 <div>
   <h2>Todo List</h2>
   <h4>version: 1.0.0</h4>
+</div>
+<div>
+  <p>Created by: Anupam Datta</p>
+  <h4>github repo:
+    <code><a href={{gitRepoUrl}} target="_blank">basic-todo-angular</a></code>
+  </h4>
+</div>
+<div>
   <a routerLink="/">Home</a>
 </div>
